:bug: Fix disabled color on path toolbar  and alignment buttons

--- a/frontend/resources/styles/common/refactor/themes/default-theme.scss
+++ b/frontend/resources/styles/common/refactor/themes/default-theme.scss
@@ -16,7 +16,7 @@
   --color-foreground-primary: var(--white);
   --color-foreground-secondary: var(--off-white);
   --color-foreground-tertiary: var(--pink);
-  --color-foreground-disabled: var(--dark-gray-4);
+  --color-foreground-disabled: var(--off-white-40);
   --color-accent-primary: var(--green);
   --color-accent-primary-muted: var(--green-30);
   --color-accent-secondary: var(--lilac);
